...
            android:src="@android:drawable/ic_menu_info_details"
            app:layout_constraintTop_toBottomOf="@+id/share_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Save name -->
        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
...
